Fix transform origin on mobile view

--- a/assets/css/info.css
+++ b/assets/css/info.css
@@ -10,7 +10,14 @@
 .panel-enter-to,
 .panel-leave {
     transition: transform 0.3s ease-in-out;
-    transform-origin: left;
+    transform-origin: top;
+}
+
+@screen sm {
+    .panel-enter-to,
+    .panel-leave {
+        transform-origin: left;
+    }
 }
 
 .switch-enter,
